<resources>
    <string name="app_name">saFe-P</string>
    <string name="prompt_system_name">System name</string>
    <string name="prompt_encryption_key">Encryption Key</string>
    <string name="prompt_encryption_key_repeat">Repeat Encryption Key</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_master_password">Master Password</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_broken_validation_rules">Broken Password Validation Rules</string>
    <string name="prompt_password_repeat">Master Password Repeat</string>
    <string name="prompt_url">Url</string>
    <string name="prompt_message_tag">Tag</string>
    <string name="prompt_message_content">Content</string>
    <string name="lbl_activate_fingerprint_login">"Activate fingerprint login"</string>
    <string name="lbl_deactivate_fingerprint_login">"Deactivate fingerprint login"</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_encryption_key">Encryption key must be > 7 characters</string>
    <string name="invalid_username">Username must be > 1 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_user_access_denied">"Access is denied for user"</string>
    <string name="login_user_to_many_failed_login_attempts">"To many failed login attempts, user is locked"</string>
    <string name="login_user_to_many_failed_login_attempts_wait">"To many failed login attempts, you must wait 1 day "</string>
    <string name="login_password_not_set">"Master password must be set and can not be blank"</string>
    <string name="login_registration_error">"Application error, a user already exist"</string>

    <string name="menu_logout">Logout</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_credentials">Credentials</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sort">Sort</string>
    <string name="title_credential">Credential Store</string>
    <string name="title_credential_list">Credentials</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_add">Add Message</string>
    <string name="title_settings">Settings</string>
    <string name="title_admin">Admin</string>
    <string name="title_credential_add">Add credential</string>
    <string name="title_activity_login">Login Credential Store</string>
    <string name="title_activity_close">Close</string>
    <string name="title_activity_main">saFe-P</string>
    <string name="lbl_system">System</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_password_validation">Password Validation</string>
    <string name="prompt_created_date">Created date</string>
    <string name="prompt_last_modified_date">Last modified date</string>
    <string name="lbl_url">Url</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add">Add</string>
    <string name="btn_create">Create</string>
    <string name="btn_login">Login</string>
    <string name="btn_change_master_password">Save Master Password</string>
    <string name="btn_fingerprint_login">Fingerprint Login</string>

    <string name="txt_colon">:</string>
    <string name="txt_empty"></string>
    <string name="lbl_workday_date">Workday date</string>
    <string name="lbl_to_time">To time</string>
    <string name="lbl_from_time">From time</string>
    <string name="hh_mm">HH:mm</string>
    <string name="dd_mm_yyyy">dd-MM-yyyy</string>
    <string name="btn_delete">Delete</string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="pref_automatic_logout_time">pref_automatic_logout_timeout</string>
    <string name="pref_password_length_rule">pref_password_length_rule</string>
    <string name="pref_password_uppercase_rule">pref_password_uppercase_rule</string>
    <string name="pref_password_least_lowercase_rule">pref_password_least_lowercase_rule</string>
    <string name="pref_password_least_digit_rule">pref_password_least_digit_rule</string>
    <string name="pref_password_least_symbol_rule">pref_password_least_symbol_rule</string>
    <string name="pref_password_repeat_character_rule">pref_password_repeat_character_rule</string>
    <string name="pref_password_illegal_sequence_alphabetical_rule">pref_password_illegal_sequence_alphabetical_rule</string>
    <string name="pref_password_illegal_sequence_numerical_rule">pref_password_illegal_sequence_numerical_rule</string>
    <string name="pref_password_illegal_sequence_us_qwerty_rule">pref_password_illegal_sequence_us_qwerty_rule</string>

</resources>