<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_credential_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/title_credential_list" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_admin" />
        <item
            android:id="@+id/nav_close"
            android:icon="@drawable/ic_close_black_24dp"
            android:title="@string/title_activity_close" />
    </group>
</menu>