<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CredentialAddFragment"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/credential_entity_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text=""
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/credential_add_section_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/title_credential_register"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorSection" />

        <TableLayout
            android:id="@+id/credential_register_work_tbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credential_add_section_header"
            android:stretchColumns="0,1">

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_system"
                    android:labelFor="@+id/credential_system"/>

                <EditText
                    android:id="@+id/credential_system"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="3dip"
                    android:maxLength="25"
                    android:inputType="text"
                    android:autofillHints="" />
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_username"
                    android:labelFor="@+id/credential_username"/>

                <EditText
                    android:id="@+id/credential_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="text"
                    android:maxLength="25"
                    android:autofillHints="" />
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_password"
                    android:labelFor="@+id/credential_password"/>

                <EditText
                    android:id="@+id/credential_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="text"
                    android:maxLength="25"
                    android:autofillHints="" />
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="3dip"
                    android:text="@string/lbl_url"
                    android:labelFor="@+id/credential_url"/>

                <EditText
                    android:id="@+id/credential_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="text"
                    android:maxLength="100"
                    android:autofillHints="" />
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:id="@+id/tbl_credential_register_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credential_register_work_tbl"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_credential_register_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="5dp"
                android:drawableStart="@android:drawable/ic_menu_save"
                android:text="@string/btn_save"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_credential_register_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/btn_credential_register_save"
                android:drawableStart="@android:drawable/ic_menu_delete"
                android:text="@string/btn_delete"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_credential_register_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/btn_credential_register_delete"
                android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
                android:text="@string/btn_cancel"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </RelativeLayout>

    </RelativeLayout>
</FrameLayout>