<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/credential_entity_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="invisible" />

    <TextView
        android:id="@+id/credential_header_txt"
        style="@style/credential_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@color/color_tbl_header"
        android:text="@string/prompt_system_name"
        android:textAlignment="textStart"
        android:textStyle="normal" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/credential_header_txt"
        android:gravity="center"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:stretchColumns="2">

        <TableRow>

            <View
                android:id="@+id/credential_username_status"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:background="@color/color_password_strength_strong"
                android:gravity="center"
                android:minWidth="3dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/credential_username_lbl"
                style="@style/CustomTextViewLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:minWidth="50dp"
                android:text="@string/lbl_username" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/credential_username_value"
                style="@style/CustomTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="" />
        </TableRow>

        <TableRow>

            <View
                android:id="@+id/credential_password_status"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:background="@color/color_password_strength_strong"
                android:gravity="center"
                android:minWidth="5dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/credential_password_lbl"
                style="@style/CustomTextViewLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:minWidth="50dp"
                android:text="@string/lbl_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_encryption_key_input_layout"
                style="@style/CustomTextInputReadOnlyLayout"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_margin="0dp"
                app:passwordToggleTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextInputEditText"
                    android:id="@+id/credential_password_value"
                    android:layout_width="match_parent"
                    android:layout_margin="0dp"
                    android:ems="@integer/material_motion_duration_short_1"
                    android:enabled="false"
                    android:inputType="textPassword"
                    android:gravity="start"
                    tools:ignore="RtlHardcoded" />
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>
    </TableLayout>
</RelativeLayout>