<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MessageAddFragment"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/message_entity_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text=""
            android:visibility="invisible" />

        <TextView
            android:id="@+id/message_user_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text=""
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/message_add_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/message_created_date_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:hint="@string/prompt_created_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message_created_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="text"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/message_last_modified_date_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:hint="@string/prompt_last_modified_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message_last_modified_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="text"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/prompt_message_tag">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/prompt_message_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="50"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tbl_message_register_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_add_layout"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_message_register_delete"
                style="@style/CustomIconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:icon="@drawable/ic_delete_red_24dp"
                app:iconSize="48dp"
                app:iconTint="@color/color_btn_bg_delete" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_message_register_cancel"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:icon="@drawable/ic_close_black_24dp"
                app:iconSize="48dp"
                app:iconTint="@color/color_btn_bg_cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_message_register_save"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_add_black_24dp"
                app:iconSize="48dp"
                app:iconTint="@color/color_btn_bg_add" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>